tests/pos/IdNat0.hs
module IdNat0 where

{-@ nat :: Nat @-}
nat :: Int
nat = idd 0 

idd :: a -> a
idd = undefined 
